--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+body { background-color: #f8f8f8; }
+
+.cabecera-sitio {
+  color: #000;
+  font-family: 'Lato', sans-serif;
+  font-size: 2.4rem;
+  line-height: 2.4rem;
+}
+
+.cabecera-sitio span {
+  color: #e082a8;
+  font-family: 'Italianno', cursive;
+  font-size: 3.8rem;
+}
+
 .sociales ul { list-style: none; }
 
 .sociales ul li {
@@ -38,6 +53,36 @@
   background-repeat: repeat-x;
 }
 
-.nav-link { font-size: 1.4rem; }
+.nav-link {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.4rem;
+  transition: all .5s ease-in-out;
+}
 
 .nav-link:hover { background-color: #39a68b; }
+
+.carousel-caption h3 {
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+.nuevo-sitio p {
+  color: #979797;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+}
+
+.imagen-servicio img { border: 6px solid #fff; }
+
+.servicio-info {
+  background-color: #fff;
+  margin-top: -5rem;
+}
+
+.servicio-info .btn-primary {
+  border-radius: 0;
+  background-color: #e082a8;
+  border: none;
+}
