--- a/css/styles.css
+++ b/css/styles.css
@@ -86,3 +86,30 @@ body { background-color: #f8f8f8; }
   background-color: #e082a8;
   border: none;
 }
+
+.horario { background-color: #8ed3cc; }
+
+.horario h2 {
+  font-size: 2.2rem;
+  font-family: 'Lato', sans-serif;
+}
+
+.horario .table { border: 2px solid #e082a8; }
+
+.horario .table thead { background-color: #e082a8; }
+
+.horario .table td, .horario .table thead th { border: none; }
+
+.horario .table tbody tr td {
+  padding: .35rem;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.2rem;
+}
+
+.bg-horario {
+  background-image: url(../images/bg_horarios.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  min-height: 400px;
+}
