Se finaliza la página principal y se crea una nueva plantilla

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,3 +113,57 @@ body { background-color: #f8f8f8; }
   background-size: cover;
   min-height: 400px;
 }
+
+.productos .card { border: none; }
+
+.productos .card a { color: #000; }
+
+.productos .card a:hover { text-decoration: none; }
+
+.productos .card h3 {
+  color: #e082a8;
+  font-size: 1.2rem;
+  font-family: 'Lato', sans-serif;
+}
+
+.productos .card p { font-size: .8rem; }
+
+.productos .card .precio {
+  font-size: 1.6rem;
+  color: #979797;
+}
+
+.citas {
+  background-image: url(../images/bg_citas.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+@media (min-width: 992px) {
+  .citas { background-size: cover; }
+}
+
+.citas h3 {
+  font-size: 3.5rem;
+  font-family: 'Lato', sans-serif;
+}
+
+.citas p {
+  font-size: 1.2rem;
+  line-height: 2.6rem;
+}
+
+.citas .btn-primary {
+  background-color: #8ed3cc;
+  border: 0;
+  padding: 1rem 5rem;
+  border-radius: 0;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+}
+
+.copyright {
+  color: #979797;
+  font-size: .8rem;
+}
