--- a/css/styles.css
+++ b/css/styles.css
@@ -140,10 +140,6 @@ body { background-color: #f8f8f8; }
   background-attachment: fixed;
 }
 
-@media (min-width: 992px) {
-  .citas { background-size: cover; }
-}
-
 .citas h3 {
   font-size: 3.5rem;
   font-family: 'Lato', sans-serif;
@@ -166,4 +162,29 @@ body { background-color: #f8f8f8; }
 .copyright {
   color: #979797;
   font-size: .8rem;
+}
+
+.hero { position: relative; }
+
+.hero h2 {
+  position: absolute;
+  bottom: 2rem;
+  right: 0;
+  background-color: #8ed3cc;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  color: #fff;
+  font-size: 2.8rem;
+}
+
+.contenido-principal p {
+  font-size: 1.2rem;
+  line-height: 2.2rem;
+  font-family: 'Lato', sans-serif;
+}
+
+aside { background-color: #8ed3cc; }
+
+@media (min-width: 992px) {
+  .citas { background-size: cover; }
 }
