--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,27 @@ body { background-color: #f8f8f8; }
 
 aside { background-color: #8ed3cc; }
 
+#servicios .card-header {
+  background-color: #e082a8;
+  padding: 0 1.25rem;
+}
+
+#servicios .card-header .btn-link {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+}
+
+#servicios .card-body { font-size: 1.2rem; }
+
+.cupon {
+  border: 3px dashed #fff;
+  font-family: 'Lato', sans-serif;
+}
+
+.cupon .display-4 { font-size: 2rem; }
+
+.cupon p { font-size: 1.2rem; }
+
 @media (min-width: 992px) {
   .citas { background-size: cover; }
 }
