--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,28 @@ aside { background-color: #8ed3cc; }
 
 .cupon p { font-size: 1.2rem; }
 
+.formulario-contacto {
+  border: 2px solid #9a9a9a;
+  background-color: #fff;
+}
+
 @media (min-width: 992px) {
   .citas { background-size: cover; }
+
+  .card-columns {
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-count: 4;
+  }
+}
+
+@media (min-width: 576px) {
+  .card-columns {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+  }
 }
